--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "All money matters. Money really really really matters.",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
