--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/aditshinde/moneymatters#readme",
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
     "fastify": "^2.1.0",
     "fastify-static": "^2.4.0",
     "json2csv": "^4.4.1",
